--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.3.1",
+    "node-sass": "4.11.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-router-dom": "4.3.1",
@@ -28,6 +29,6 @@
   "devDependencies": {
     "react-redux": "6.0.1",
     "redux": "4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "2.3.0"
   }
 }
