--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.15",
+    "@fortawesome/free-solid-svg-icons": "5.7.2",
+    "@fortawesome/react-fontawesome": "0.1.4",
     "bootstrap": "4.3.1",
-    "connected-react-router": "^6.3.1",
+    "connected-react-router": "6.3.1",
     "node-sass": "4.11.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -28,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "json-server": "^0.14.2",
     "react-redux": "6.0.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
