--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.3.1",
     "connected-react-router": "6.3.1",
     "node-sass": "4.11.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-router-dom": "^4.3.1",
