--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "bootstrap": "4.3.1",
     "connected-react-router": "6.3.1",
     "node-sass": "4.11.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "7.1.0"
   },
@@ -32,7 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "json-server": "^0.14.2",
+    "json-server": "0.14.2",
     "react-redux": "6.0.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
